# time-series-market-forecasting

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: architecture.md  experiment_log.md  model_card.md
notebooks/: eda.ipynb
src/market_forecast/: api.py  app.py  config.py  data.py  features.py  models.py  predict.py  train.py  validate.py
tests/: conftest.py  test_api.py  test_features.py  test_metrics.py  test_models.py  test_smoke.py  test_validation.py
