[project]
name = "market-forecast"
version = "0.1.0"
description = "Walk-forward time-series forecasting pipeline: naive -> ARIMA -> XGBoost."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Luke Gardiner" }]
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.48.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "statsmodels>=0.14",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "requests>=2.32",
    "joblib>=1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "nbconvert>=7.17.1",
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_forecast"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, N: naming, UP: pyupgrade,
# B: bugbear, SIM: simplify, C4: comprehensions
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
# statsmodels, xgboost, pandas-datareader ship without complete type stubs.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
